# spectec

interpreter/script/: js.ml  runner.ml  script.ml
interpreter/text/: arrange.ml
specification/wasm-1.0/: 0-aux.spectec  1-syntax.spectec
specification/wasm-2.0/: 1-syntax.spectec  5-runtime-aux.spectec
specification/wasm-3.0/: 1.1-syntax.values.spectec  1.2-syntax.types.spectec  1.3-syntax.instructions.spectec  2.0-validation.contexts.spectec  4.0-execution.configurations.spectec  4.1-execution.values.spectec  6.2-text.types.spectec  6.3-text.instructions.spectec
specification/wasm-latest/: 0.3-aux.seq.spectec  1.2-syntax.types.spectec  1.3-syntax.instructions.spectec  3.1-numerics.scalar.spectec  4.1-execution.values.spectec  6.2-text.types.spectec
spectec/: Makefile  il_print.txt
spectec/doc/: Language.md
spectec/src/: dune
spectec/src/backend-ast/: print.ml
spectec/src/backend-coq/: coq.ml  dune  il2itp.ml  itp.ml  itp2coq.ml  print.ml  sub.ml
spectec/src/backend-interpreter/: ds.ml  ds.mli  interpreter.ml
spectec/src/backend-rocq/: print.ml
spectec/src/exe-spectec/: main.ml
spectec/src/exe-watsup/: main.ml
spectec/src/frontend/: dim.ml  lexer.mll  parser.mly
spectec/src/il/: ast.ml  eval.ml  free.ml  iter.ml  print.ml  print.mli  subst.ml  valid.ml  walk.ml
spectec/src/il2al/: animate.ml  free.ml  il_walk.ml  translate.ml
spectec/src/il2mil/: preprocess.ml  tfamily.ml  (+1 more)
spectec/test-frontend/: TEST.md
spectec/test-latex/: TEST.md
spectec/test-middlend/: TEST.md  test.spectec  test.spectec.exp
spectec/test-prose/: TEST.md
(+23 files in other folders)
